# OwlBot

./: CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0-beta.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  pyproject.toml
.github/workflows/: python-package.yml
OwlBot/: pyproject.toml
OwlBot/owlbot/: __init__.py
OwlBot/owlbot/config/: __init__.py
OwlBot/owlbot/core/: bot.py  decorators.py  utils.py
OwlBot/owlbot/modules/: __init__.py  audio.py  base.py  files.py  input.py  monitoring.py  network.py  processes.py  screen.py  system.py
OwlBot/owlbot/platform/: __init__.py  telegram.py
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  EXAMPLES.md  GETTING_STARTED.md  INDEX.md  MODULES.md  README-de.md  README-es.md  README-fa.md  README-fr.md  README-it.md  README-ja.md  README-ko.md  README-nl.md  README-ru.md  README-tr.md  README-zh.md  SECURITY.md
src/owlbot/: __init__.py  __main__.py
src/owlbot/config/: __init__.py
src/owlbot/core/: bot.py  help.py
src/owlbot/modules/: __init__.py  audio.py  ffmpeg.py  files.py  input.py  ip.py  monitoring.py  network.py  processes.py  screen.py
tests/: test_ip.py  test_monitoring.py
